@@ -1,8 +1,9 @@
 Django>=2.2,<=3.2
 django-cors-headers==3.13.0
+django-environ==0.9.0
 django-filter==22.1
 django-mysql~=4.7
-djangorestframework>=3.10.1,<4.0
+djangorestframework>=3.13,<4.0
 djangorestframework-simplejwt~=4.4.0
 fabric~=2.7
 Markdown~=3.4
