@@ -1,9 +1,5 @@
 import os
 import re
-import shutil
-
-from rework import core
-from rework.core.utils import copy_template_to_file
 
 
 class SettingsHandle:
@@ -14,30 +10,7 @@ class SettingsHandle:
         self.base_dir = os.getcwd()
         self.project = project
         self.path = path  # settings root path, generally is project name
-        self.base_settings_file = None
-
-    def _create_settings_package(self):
-        #  1. Make a package named `settings`
-        package = os.path.join(self.path, 'settings')
-        base_settings_path = os.path.join(package, 'base')
-        os.makedirs(base_settings_path)
-
-        #  2. Move origin settings.py to settings/base/__init__.py
-        origin_settings_file = os.path.join(self.path, 'settings.py')
-        target_settings_file = os.path.join(base_settings_path, '__init__.py')
-        shutil.move(origin_settings_file, target_settings_file)
-
-        self.base_settings_file = target_settings_file
-
-    def create_multi_envs(self):
-        kwargs = {
-            'django_rework_version': core.__version__,
-            'project': self.project,
-        }
-        settings_tpl_path = 'project/settings/'
-        envs = ['prod', 'test', 'dev', 'local']
-        for env in envs:
-            copy_template_to_file(f'{settings_tpl_path}{env}.py', self.base_dir, **kwargs)
+        self.base_settings_file = os.path.join(self.path, 'settings.py')
 
     @staticmethod
     def _save(f, content):
@@ -134,10 +107,7 @@ LOGGING = {
             self._save(f, content)
 
     def initialize(self):
-        self._create_settings_package()
-        # Added multi env setting files
-        self.create_multi_envs()
-        # Added template tag to base/__init__.py
+        # Added template tag to settings.py
         self._add_tags()
         self._add_installed_apps()
         self._add_rest_framework_setting()
